[2.5] Внесла изменения согласно последних замечаний, убрала лишние пробелы в импортах классов. #34